# solis-app

./: .env.example  .gitignore  .mcp.json  Anchor.toml  BUSINESS.md  COMPETITIVE_ANALYSIS_2026.md  README.md  logo-preview.html  middleware.ts  next.config.ts  package-lock.json  package.json  proxy.ts  start-dev.sh  vercel.json
.claude/: launch.json  settings.local.json
__tests__/: input-validation.test.ts  mandate-program.test.ts  network-config.test.ts  rescue-executor.test.ts
app/: globals.css  layout.tsx  page.tsx
ceremony/: TRANSCRIPT.md
components/: ActionHistory.tsx  AgentFactory.tsx  AgentPanel.tsx  AnimatedNumber.tsx  AppNav.tsx  ArchitectureDiagram.tsx  CopyTradeModal.tsx  CryptoProofPanel.tsx  DefiAssistant.tsx  ErrorBoundary.tsx  Footer.tsx  GhostRun.tsx  HealthReport.tsx  IntentSigner.tsx  LendModal.tsx  LiquidationShield.tsx  MutualPool.tsx  NonceGuardian.tsx  NumeralSeal.tsx  PriceTicker.tsx  SafetyRules.tsx  SakuraSeal.tsx  SealStampOverlay.tsx  StakeModal.tsx  StrategyCompiler.tsx  SubscriptionBanner.tsx  SwapModal.tsx  TokenAnalysis.tsx  WaBijinSVG.tsx  WaPattern.tsx  WalletConnect.tsx
contexts/: LanguageContext.tsx  WalletContext.tsx
docs/: AUDIT.md  AUDIT_KEY.md  BACKTEST-RESCUES.json  BACKTEST-RESCUES.md  COLOSSEUM_SUBMISSION.md  DEMO_SHOT_LIST.md  DUAL_ORACLE_SPEC.md  EXTERNAL_POST_DRAFT.md  FOR_BUILDERS.md  FOR_USERS.md  INCIDENT-LIBRARY.md  MERKLE_DESIGN.md  PITCH.md  REBUILD.md  SQUADS_MIGRATION_RUNBOOK.md  TRUST_HARDENING_DEPLOY.md  VALUE_CAPTURE.md  WHITEPAPER.md  WHY-BOUNDED-INTENT.md
lib/: agent.ts  chat-memory.ts  crypto-proof.ts  demo-data.ts  demo-store.ts  device-id.ts  ghost-run.ts  groth16-verify.ts  guardian-state.ts  i18n.ts  insurance-pool.ts  liquidation-shield.ts  managed-agent.ts  mandate-program.ts  merkle-audit.ts  merkle-persistence.ts  network-config.ts  nonce-scanner.ts  og-bijin-b64.ts  portfolio-history.ts  proof-store.ts  rate-limit.ts  redis.ts  safety-rules.ts  sak-executor.ts  strategy-compiler.ts  subscription.ts  switchboard-post.ts  technical-analysis.ts  watchlist.ts  x402.ts  zk-proof.ts
programs/sakura-insurance/: Cargo.toml
programs/sakura-insurance/src/: lib.rs  zk_verifying_key.rs
public/: deck.html  robots.txt
scripts/: backtest-rescues.ts  bench-verify-cu.ts  check-pyth.ts  e2e-intent-execute.ts  e2e-intent-revert.ts  e2e-zk-claim.ts  initialize-insurance-pool.ts  parse-vk-to-rust.js  render-sakura-seal.mjs  stress-test.ts  (+3 more)
(+98 files in other folders)
