[package]
name = "sakura-insurance"
version = "0.1.0"
description = "Sakura Rescue Insurance Pool — user-funded, LP-backed rescue capital market"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sakura_insurance"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
solana-program = "1.18"
# Real Groth16 on-chain verifier (Light Protocol fork) — uses Solana's
# sol_alt_bn128_pairing / addition / multiplication syscalls.
groth16-solana = "0.2.0"
